# Pattern

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
agent/: pyproject.toml
agent/tests/: live_shopify_probe.py  test_adapter_selection.py  test_conversation.py  test_demo_surface.py  test_evaluation.py  test_evaluation_dashboard.py  test_grounding.py  test_llm_compiler.py  test_meeting_workflow.py  test_order_rescue.py  test_order_rescue_adapters.py  test_order_rescue_execution.py  test_reminder_workflow.py  test_research_workflow.py  test_schemas.py  test_shopify_adapter.py  test_sidecar.py  test_slack_adapter.py
agent/voiceops_agent/: conversation.py  evaluation.py  evaluation_dashboard.py  grounding.py  llm_compiler.py  main.py  schemas.py
agent/voiceops_agent/adapters/: live.py  shopify.py  slack.py
agent/voiceops_agent/evals/: __init__.py  order_rescue.py
agent/voiceops_agent/workflows/: meeting_briefing.py  order_rescue.py  order_rescue_adapters.py  order_rescue_execution.py  reminders.py  research_followup.py
commandcenter/: DEMO.md  INTEGRATION.md  README.md  eval-report.json  eval-report.md  package-lock.json  package.json  tsconfig.json
docs/: ARD.md  BUILD-SPEC.md  DECISIONS.md  DEMO.md  EVALUATION.md  HANDOFF.md  PRD-command-center.md  PRD.md  PROGRESS.md  RESEARCH.md  VISION-dictator.md
evals/: cases.json  dashboard.html
macos/: Package.swift  project.yml
schemas/: ActionResult.json  ActionStarted.json  AppliedPlanPatch.json  ApprovalBinding.json  ApprovalRequest.json  Envelope.json  (+22 more)
(+166 files in other folders)
