[project]
name = "voiceops-agent"
version = "0.1.0"
description = "VoiceOps Python sidecar: model orchestration, planning, policy, verification"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.scripts]
voiceops-agent = "voiceops_agent.main:main"
voiceops-export-schemas = "voiceops_agent.schemas:export_json_schemas_cli"
voiceops-eval = "voiceops_agent.evaluation:main"
voiceops-dashboard = "voiceops_agent.evaluation_dashboard:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voiceops_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
